Refinamento de detalhes visuais

--- a/history.html
+++ b/history.html
@@ -71,9 +71,6 @@
             <a class="nav-link" href="history.html">Histórico</a>
              <span class="sr-only">(current)</span>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="doctors.html">Documentação</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -231,12 +228,13 @@
         <!-- About -->
         <div class="col-md-6 col-lg-3 footer_col">
           <div class="footer_detail">
-            <h4>About</h4>
-            <p>
-              Beatae provident nobis mollitia magnam voluptatum, unde dicta facilis minima
-              veniam corporis laudantium alias tenetur eveniet illum reprehenderit fugit
-              a delectus officiis blanditiis ea.
-            </p>
+            <h4>
+                Sobre
+              </h4>
+              <p>
+                Sistema criado por estudantes do IFPE para análise de ultrassons, auxiliando no diagnóstico de ovários policísticos com precisão e acessibilidade.
+              </p>
+
           </div>
         </div>
 
@@ -246,21 +244,20 @@
             <h4>Links</h4>
             <div class="footer_links">
               <a href="index.html">Home</a>
-              <a href="about.html">About</a>
-              <a class="active" href="departments.html">Departments</a>
-              <a href="doctors.html">Doctors</a>
-              <a href="contact.html">Contact Us</a>
+              <a href="analysis.html">Análise</a>
+              <a class="active" href="history.html">Histórico</a>
             </div>
           </div>
         </div>
 
         <!-- Newsletter -->
         <div class="col-md-6 col-lg-3 footer_col">
-          <h4>Newsletter</h4>
-          <form action="#">
-            <input type="email" placeholder="Enter email" />
-            <button type="submit">Subscribe</button>
-          </form>
+         <h4>Equipe</h4>
+          <ul style="list-style: none; padding: 0; margin: 0;">
+            <li style="margin-bottom: 6px;">Estudantes do IFPE – Campus Palmares e Paulista</li>
+            <li style="margin-bottom: 6px;">Orientação: Prof. Diogo Lopes</li>
+            <li>Apoio técnico: Dr. Roberto Luiz Reis Gomes</li>
+          </ul>
         </div>
       </div>
 
