--- a/analysis.html
+++ b/analysis.html
@@ -71,9 +71,6 @@
           <li class="nav-item active">
             <a class="nav-link" href="history.html">Histórico</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="doctors.html">Documentação</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -118,7 +115,7 @@
                                     </button>
 
                                 </div>
-                                <p class="tw-text-sm tw-text-gray-500 tw-mt-4">Formatos suportados: JPG, PNG, DICOM</p>
+                                <p class="tw-text-sm tw-text-gray-500 tw-mt-4">Formatos suportados: JPG, PNG, DICOM, MP4, AVI, MOV, MKV</p>
                             </div>
                             <input type="file" id="file-input" class="tw-hidden" multiple accept="image/jpeg,image/png,.dcm">
                             <input type="file" id="folder-input" class="tw-hidden" webkitdirectory directory multiple accept="image/jpeg,image/png,.dcm">
@@ -135,7 +132,7 @@
                         <h2 class="tw-text-xl tw-font-semibold tw-text-gray-800 tw-mb-4">2. Nomeie sua análise</h2>
                         <div class="tw-max-w-md">
                             <label for="analysis-name" class="tw-block tw-text-sm tw-font-medium tw-text-gray-700 tw-mb-1">Nome da análise</label>
-                            <input type="text" id="analysis-name" class="tw-w-full tw-px-4 tw-py-2 tw-border tw-border-gray-300 tw-rounded-lg focus:tw-ring-indigo-500 focus:tw-border-indigo-500" placeholder="Ex: Paciente Maria - 05/2023">
+                            <input type="text" id="analysis-name" class="tw-w-full tw-px-4 tw-py-2 tw-border tw-border-gray-300 tw-rounded-lg focus:tw-ring-indigo-500 focus:tw-border-indigo-500" placeholder="Ex: Paciente Maria - 05/2025">
                             <p class="tw-mt-1 tw-text-sm tw-text-gray-500">Este nome ajudará a identificar sua análise posteriormente.</p>
                         </div>
                     </div>
@@ -175,7 +172,10 @@
                             <div>
                                 <h3 class="tw-font-medium tw-text-gray-700 tw-mb-3">Imagens analisadas com marcações</h3>
                                 <div class="tw-result-image-container tw-bg-gray-100 tw-rounded-lg tw-overflow-hidden">
-                                    <img id="result-image" src="" alt="Resultado da análise(Retorno da API)" class="tw-w-full tw-h-auto">
+                                    <div id="result-images" class="tw-grid tw-grid-cols-1 md:tw-grid-cols-2 tw-gap-4 tw-bg-gray-100 tw-rounded-lg tw-p-4">
+                                        <!-- As imagens aparecerão aqui -->
+                                    </div>
+
                                 </div>
                             </div>
                             <div>
@@ -283,12 +283,14 @@
         <!-- About -->
         <div class="col-md-6 col-lg-3 footer_col">
           <div class="footer_detail">
-            <h4>About</h4>
+            <h4>
+              Sobre
+            </h4>
             <p>
-              Beatae provident nobis mollitia magnam voluptatum, unde dicta facilis minima
-              veniam corporis laudantium alias tenetur eveniet illum reprehenderit fugit
-              a delectus officiis blanditiis ea.
+              Sistema criado por estudantes do IFPE para análise de ultrassons, auxiliando no diagnóstico de ovários policísticos com precisão e acessibilidade.
             </p>
+
+
           </div>
         </div>
 
@@ -298,21 +300,20 @@
             <h4>Links</h4>
             <div class="footer_links">
               <a href="index.html">Home</a>
-              <a href="about.html">About</a>
-              <a class="active" href="departments.html">Departments</a>
-              <a href="doctors.html">Doctors</a>
-              <a href="contact.html">Contact Us</a>
+              <a class="active" href="analysis.html">Análise</a>
+              <a href="history.html">Histórico</a>
             </div>
           </div>
         </div>
 
         <!-- Newsletter -->
         <div class="col-md-6 col-lg-3 footer_col">
-          <h4>Newsletter</h4>
-          <form action="#">
-            <input type="email" placeholder="Enter email" />
-            <button type="submit">Subscribe</button>
-          </form>
+          <h4>Equipe</h4>
+          <ul style="list-style: none; padding: 0; margin: 0;">
+            <li style="margin-bottom: 6px;">Estudantes do IFPE – Campus Palmares e Paulista</li>
+            <li style="margin-bottom: 6px;">Orientação: Prof. Diogo Lopes</li>
+            <li>Apoio técnico: Dr. Roberto Luiz Reis Gomes</li>
+          </ul>
         </div>
       </div>
 
