--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="history.html">Histórico</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="doctors.html">Documentação</a>
-              </li>
+            
             </ul>
           </div>
         </nav>
@@ -259,7 +257,7 @@
               </h2>
             </div>
             <p>
-              O sistema nasceu como iniciativa do Projeto COMPET, unindo estudantes dos cursos de tecnologia do IFPE – Campus Palmares e Campus Paulista. Sob a orientação do professor Diogo Lopes e com o apoio técnico do Dr. [Nome do Doutor], que também atua como cliente do projeto, desenvolvemos uma solução voltada para a análise de imagens de ultrassom.
+              O sistema nasceu como iniciativa do Projeto COMPET, unindo estudantes dos cursos de tecnologia do IFPE – Campus Palmares e Campus Paulista. Sob a orientação do professor Diogo Lopes e com o apoio técnico do Dr.Roberto Luiz Reis Gomes, que também atua como cliente do projeto, desenvolvemos uma solução voltada para a análise de imagens de ultrassom.
 
 Nosso objetivo é aplicar inovação tecnológica na área da saúde, auxiliando o médico no diagnóstico de ovários policísticos e oferecendo uma ferramenta que une precisão, acessibilidade e impacto social.
             </p>
@@ -323,11 +321,12 @@ Nosso objetivo é aplicar inovação tecnológica na área da saúde, auxiliando
         <div class="col-md-6 col-lg-3 footer_col">
           <div class="footer_detail">
             <h4>
-              About
+              Sobre
             </h4>
             <p>
-              Beatae provident nobis mollitia magnam voluptatum, unde dicta facilis minima veniam corporis laudantium alias tenetur eveniet illum reprehenderit fugit a delectus officiis blanditiis ea.
+              Sistema criado por estudantes do IFPE para análise de ultrassons, auxiliando no diagnóstico de ovários policísticos com precisão e acessibilidade.
             </p>
+
           </div>
         </div>
         <div class="col-md-6 col-lg-2 mx-auto footer_col">
@@ -342,28 +341,19 @@ Nosso objetivo é aplicar inovação tecnológica na área da saúde, auxiliando
               <a class="" href="analysis.html">
                 Análise
               </a>
-              <a class="" href="departments.html">
+              <a class="" href="history.html">
                 Histórico
-              </a>
-              <a class="" href="doctors.html">
-                Documentação
-              </a>
-              <a class="" href="contact.html">
-                Sobre Nós
               </a>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 footer_col ">
-          <h4>
-            Newsletter
-          </h4>
-          <form action="#">
-            <input type="email" placeholder="Enter email" />
-            <button type="submit">
-              Subscribe
-            </button>
-          </form>
+           <h4>Equipe</h4>
+          <ul style="list-style: none; padding: 0; margin: 0;">
+            <li style="margin-bottom: 6px;">Estudantes do IFPE – Campus Palmares e Paulista</li>
+            <li style="margin-bottom: 6px;">Orientação: Prof. Diogo Lopes</li>
+            <li>Apoio técnico: Dr. Roberto Luiz Reis Gomes</li>
+          </ul>
         </div>
       </div>
       <div class="footer-info">
