Adicionando parte da integração

--- a/history.html
+++ b/history.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> CistoNet </title>
+  <title> CistosNet </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -49,7 +49,7 @@
   <div class="container">
     <nav id="departments-navbar" class="navbar navbar-expand-lg custom_nav-container">
       <a class="navbar-brand" href="index.html">
-        <span>CistoNet</span>
+        <span>CistosNet</span>
       </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse"
